DrawString with TexturePaint is corrupted

XMLWordPrintable

    • 2d
    • generic
    • os_x

      Run J2DDemos with Metal -> Go to Composite tab -> demos.Composite.FadeAnim -> Increase the number of strings drawn to 8(Also make shapes and images to 0 to easily see the issue)

      "DstOver" String drawn is corrupted. Issue is seen in EA2 also.

        1. Metal.png
          Metal.png
          254 kB
        2. OpenGL.png
          OpenGL.png
          240 kB
        3. TexturePaintString.java
          0.9 kB
        4. transformsAnim.png
          transformsAnim.png
          249 kB

            Assignee:
            Jayathirth D V
            Reporter:
            Jayathirth D V
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: