8251027: DrawString with TexturePaint is corrupted